--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Веб-приложение для составления списка дел." />
-    <meta name="keywords" content="приложение, сделать, дела, список дел" />
-    <meta name="author" content="Андруханенко Роман" />
+    <meta name="description" content="To do application." />
+    <meta name="keywords" content="application, to do, list" />
+    <meta name="author" content="Andrukhanenko Roman" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
     </style>
-    <title lang="en">To Do App</title>
+    <title>To Do App</title>
   </head>
   <body>
     <div id="root">
